# RPI-Pico-C-Template

./: CMakeLists.txt  example.c
src/: hello_world.c  main.c
